--- a/css/default/tail.select-light-feather.css
+++ b/css/default/tail.select-light-feather.css
@@ -268,7 +268,7 @@
     margin: -1px 0 0 0;
     padding: 0;
     z-index: 30;
-    /*display: none; */
+    display: none; 
     overflow: hidden;
     position: absolute;
     background-color: white;
@@ -502,6 +502,7 @@ li.dropdown-option:before{
     color: #fff;
     background-color: #FF8309;
     border-color: #FF8309;
+    border-radius: 0px;
 }
 
 
@@ -521,3 +522,6 @@ li.dropdown-option:before{
     border: 1px solid rgba(0,0,0,.125);
     
 }
+
+
+
