--- a/css/default/tail.select-light-feather2.css
+++ b/css/default/tail.select-light-feather2.css
@@ -38,7 +38,7 @@
     border-width: 1px;
     border-style: solid;
     border-color: transparent;
-    border-radius: 3px;
+    border-radius: 0px;
     box-shadow: none;
     -webkit-box-shadow: none;
     transition: color 142ms linear, border 142ms linear, background 142ms linear;
@@ -81,7 +81,7 @@
 }
 /*Input de texto del selector*/
 .tail-select2 input[type="text"]{
-    color: #303438;
+    color: #425E66;
     width: 100%;
     height: auto;
     margin: 0;
@@ -97,9 +97,10 @@
     border-radius: 0;
     box-shadow: none;
     -webkit-box-shadow: none;
+
 }
 .tail-select2 input[type="text"]:hover{
-    color: #303438;
+    color: #3C82E6;
     border-color: transparent;
     background-color: transparent;
 }
@@ -138,7 +139,7 @@
     border-width: 0;
     border-style: solid;
     border-color: transparent;
-    border-radius: 3px;
+    border-radius: 0px;
     transition: background 142ms linear;
     -webkit-transition: background 142ms linear;
 }
@@ -155,11 +156,10 @@
 /*Input principal*/
 .tail-select2 .select-label2{
     cursor: pointer;
-    color: rgba(48, 52, 56, 0.85);
+    color: #425E66;
     width: 100%;
     margin: 0;
     padding: 5px 30px 5px 10px;
-    
     z-index: 27;
     position: relative;
     text-align: left;
@@ -167,7 +167,7 @@
     border-width: 0px;
     border-style: solid;
     border-color: #d9d9d9;
-    border-radius: 3px;
+    border-radius: 0px;
     box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px rgba(0, 0, 0, 0.25);
     -webkit-box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px rgba(0, 0, 0, 0.25);
     transition: background 142ms linear, box-shadow 142ms linear;
@@ -202,13 +202,12 @@
     text-align: left;
     vertical-align: top;
 }
-/*Contador del input principal*/
+/*Icono*/
 .tail-select2 .select-label2 .label-count2{
     float: left;
     color: rgba(48, 52, 56, 0.85);
     margin: 0 5px 0 0;
     padding: 0 7px 0 0;
-    display: none;
     font-size: 11.844px;
     font-weight: bold;
     text-shadow: none;
@@ -268,18 +267,16 @@
     margin: -1px 0 0 0;
     padding: 0;
     z-index: 30;
-    display: none; 
     overflow: hidden;
     position: absolute;
     background-color: white;
     border-width: 0px;
     border-style: solid;
     border-color: #d9d9d9;
-    border-radius: 0 0 3px 3px;
     box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px rgba(0, 0, 0, 0.25);
     -webkit-box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px rgba(0, 0, 0, 0.25);
-    animation-name: selector;
     animation-duration: 5ms;  
+    display:none;
 }
 
 
@@ -343,11 +340,12 @@
 
 .tail-select2 .select-dropdown2 ul li{
     color: #303438;
-    padding: 5px 10px 5px 35px;
-    font-size: 12px;
+    padding: 10px 10px 10px 15px;
+    font-size: 16px;
     text-align: left;
     line-height: 18px;
     font-weight: normal;
+    display: flex;
 }
 
 /*margenes de las opciones */
@@ -379,24 +377,7 @@ ul li.dropdown-option2{
     cursor: pointer;
     color: #303438;
 }
-li.dropdown-option2:before{
-    top: 0;
-    left: 0;
-    width: 30px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-    z-index: 21;
-    display: inline-block;
-    content: "";
-    opacity: 0;
-    position: absolute;
-    vertical-align: top;
-    background-repeat: no-repeat;
-    background-position: center center;
-    transition: opacity 50ms linear;
-    -webkit-transition: opacity 50ms linear;
-}
+
 .tail-select2 .select-dropdown2 ul li.dropdown-option2 .option-description2{
     color: rgba(48, 52, 56, 0.85);
     width: auto;
@@ -426,10 +407,7 @@ li.dropdown-option2:before{
 .tail-select2.hide-disabled2 .select-dropdown2 ul li.disabled{
     display: none;
 }
-/* State & Icons :: Single */
-.tail-select2 .select-dropdown2 ul li.dropdown-option2:before{
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23303438%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cpath%20d%3D%22M8%203v3a2%202%200%200%201-2%202H3m18%200h-3a2%202%200%200%201-2-2V3m0%2018v-3a2%202%200%200%201%202-2h3M3%2016h3a2%202%200%200%201%202%202v3%22%3E%3C/path%3E%3C/svg%3E");
-}
+
 .tail-select2 .select-dropdown2 ul li.dropdown-option2:hover:before,
 .tail-select2 .select-dropdown2 ul li.dropdown-option.hover:before{
     opacity: 0.5;
@@ -438,18 +416,11 @@ li.dropdown-option2:before{
     color: #3C82E6;
     background-color: white;
 }
-.tail-select2 .select-dropdown2 ul li.dropdown-option2.selected:before{
-    opacity: 0.85;
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23303438%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cpolyline%20points%3D%2220%206%209%2017%204%2012%22%3E%3C/polyline%3E%3C/svg%3E");
-}
+
 .tail-select2 .select-dropdown2 ul li.dropdown-option2.selected .option-description2{
     color: #3C82E6;
 }
-.tail-select2.deselect .select-dropdown2 ul li.dropdown-option2.selected:hover:before,
-.tail-select2.deselect .select-dropdown2 ul li.dropdown-option2.selected.hover:before{
-    opacity: 0.85;
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23303438%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cline%20x1%3D%2218%22%20y1%3D%226%22%20x2%3D%226%22%20y2%3D%2218%22%3E%3C/line%3E%3Cline%20x1%3D%226%22%20y1%3D%226%22%20x2%3D%2218%22%20y2%3D%2218%22%3E%3C/line%3E%3C/svg%3E");
-}
+
 .tail-select2.deselect .select-dropdown2 ul li.dropdown-option2.selected:hover .option-description2,
 .tail-select2.deselect .select-dropdown2 ul li.dropdown-option2.selected.hover .option-description2{
     color: #3C82E6;
@@ -469,27 +440,58 @@ li.dropdown-option2:before{
     text-shadow: 0px 1px 0px rgba(119, 129, 138, 0.1), 0px -1px 0px rgba(0, 0, 0, 0.1);
     background-color: #fafafa;
 }
-.tail-select2.disabled .select-dropdown2 ul li.dropdown-option2:before,
-.tail-select2 .select-dropdown2 ul li.dropdown-option2.disabled:before{
-    opacity: 0.85;
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23303438%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cpath%20d%3D%22M8%203H5a2%202%200%200%200-2%202v3m18%200V5a2%202%200%200%200-2-2h-3m0%2018h3a2%202%200%200%200%202-2v-3M3%2016v3a2%202%200%200%200%202%202h3%22%3E%3C/path%3E%3C/svg%3E");
-}
+
 .tail-select2.disabled .select-dropdown2 ul li.dropdown-option2 .option-description2,
 .tail-select2 .select-dropdown2 ul li.dropdown-option2.disabled2 .option-description2{
     color: rgba(48, 52, 56, 0.4);
 }
-/* State & Icons :: Multiple */
-.tail-select2.multiple .select-dropdown2 ul li.dropdown-option2:before{
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23303438%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Ccircle%20cx%3D%2212%22%20cy%3D%2212%22%20r%3D%2210%22%3E%3C/circle%3E%3Cline%20x1%3D%2212%22%20y1%3D%228%22%20x2%3D%2212%22%20y2%3D%2216%22%3E%3C/line%3E%3Cline%20x1%3D%228%22%20y1%3D%2212%22%20x2%3D%2216%22%20y2%3D%2212%22%3E%3C/line%3E%3C/svg%3E");
+
+
+
+/*Propiedades de los componentes de las opciones  */
+
+#custom > div{
+    width: 20%;
 }
-.tail-select2.multiple .select-dropdown2 ul li.dropdown-option2.selected:before{
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23303438%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cpath%20d%3D%22M22%2011.08V12a10%2010%200%201%201-5.93-9.14%22%3E%3C/path%3E%3Cpolyline%20points%3D%2222%204%2012%2014.01%209%2011.01%22%3E%3C/polyline%3E%3C/svg%3E");
+
+#custom > span{
+    width: 80%;
 }
-.tail-select2.multiple .select-dropdown2 ul li.dropdown-option2.selected:hover:before,
-.tail-select2.multiple .select-dropdown2 ul li.dropdown-option2.selected.hover:before{
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23303438%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Ccircle%20cx%3D%2212%22%20cy%3D%2212%22%20r%3D%2210%22%3E%3C/circle%3E%3Cline%20x1%3D%228%22%20y1%3D%2212%22%20x2%3D%2216%22%20y2%3D%2212%22%3E%3C/line%3E%3C/svg%3E");
+
+/*Propiedades de los componentes de las opciones  */
+
+
+input[type=checkbox] {
+         position: relative;
+           cursor: pointer;
+           background: #3d404e;
+            border: #7f83a2 1px solid;
+    }
+    input[type=checkbox]:before {
+         content: "";
+         display: block;
+         position: absolute;
+         width: 16px;
+         height: 16px;
+         top: 0;
+         left: 0;
+         border: 2px solid #555555;
+         border-radius: 3px;
+         background-color: white;
+         
 }
-.tail-select2.multiple.disabled .select-dropdown2 ul li.dropdown-option2:before,
-.tail-select2.multiple .select-dropdown2 ul li.dropdown-option2.disabled:before{
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23303438%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Ccircle%20cx%3D%2212%22%20cy%3D%2212%22%20r%3D%2210%22%3E%3C/circle%3E%3C/svg%3E");
+    input[type=checkbox]:checked:after {
+         content: "";
+         display: block;
+         width: 5px;
+         height: 10px;
+         border: solid black;
+         border-width: 0 2px 2px 0;
+         -webkit-transform: rotate(45deg);
+         -ms-transform: rotate(45deg);
+         transform: rotate(45deg);
+         position: absolute;
+         top: 2px;
+         left: 6px;
+
 }
