--- a/css/default/tail.select-light-feather2.css
+++ b/css/default/tail.select-light-feather2.css
@@ -174,6 +174,9 @@
     -webkit-transition: background 142ms linear, box-shadow 142ms linear;
 }
 
+.tail-select2:hover{
+    z-index: 1000
+}
 
 /*Flecha del input principal*/
 .tail-select2 .select-label2:after{
@@ -318,7 +321,6 @@
     margin: 0;
     padding: 7px 0;
     z-index: 35;
-    
     position: absolute;
     text-align: center;
 }
