--- a/css/default/tail.select-light-feather.css
+++ b/css/default/tail.select-light-feather.css
@@ -13,12 +13,13 @@
 /* @start GENERAL */
 
 .tail-select{
-    width: 100%;
+    width: 90%;
     margin: 1px;
     position: relative;
     font-size: 14px;
     line-height: 22px;
     font-family: inherit;
+    font-weight: bold;
 }
 
 .tail-select button{
@@ -167,11 +168,6 @@
     border-width: 0px;
     border-style: solid;
     border-color: #d9d9d9;
-    
-    box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px rgba(0, 0, 0, 0.25);
-    -webkit-box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px rgba(0, 0, 0, 0.25);
-    transition: background 142ms linear, box-shadow 142ms linear;
-    -webkit-transition: background 142ms linear, box-shadow 142ms linear;
 }
 
 
