--- a/css/default/tail.select-light-feather2.css
+++ b/css/default/tail.select-light-feather2.css
@@ -19,6 +19,7 @@
     font-size: 14px;
     line-height: 40px;
     font-family: inherit;
+     font-weight: bold;
 }
 
 .tail-select2 button{
@@ -171,6 +172,7 @@
 
 }
 
+
 .tail-select2:hover{
     z-index: 1000
 }
@@ -218,6 +220,7 @@
     border-color: #d9d9d9;
     border-radius: 0px; 
     width: 30px;
+
 }
 /*contenedor del texto del input principal*/
 .tail-select2 .select-label2 .label-inner2{
@@ -498,13 +501,14 @@ input[type=checkbox] {
 /*Fuentres personalizadas*/
 @font-face {
     font-family: "Futura Bold";
-    src: url("C:/Users/Desktop/Website/fonts/Harlow_Solid_Italic.ttf");
+    src: url("C:/Workspace/Proyecto_Buscador/Buscador/fonts/futura_bold.ttf");
 }
 
 @font-face {
-    font-family: "Futura Bold";
-    src: url("C:/Users/Desktop/Website/fonts/Harlow_Solid_Italic.ttf");
+    font-family: "Futura Medium";
+    src: url("fonts/futura_medium.ttf");
 }
+
 
 
 
@@ -519,8 +523,9 @@ input[type=checkbox] {
     border-radius: 0px;
     width: 305px;
     height:60px;
-    font-family: "Futura Bold";
+    font-family: inherit;
     font-size: 15px;
+    font-weight: bold;
 }
 .btn-custom:hover{
     background-color: #E17913;
@@ -543,3 +548,22 @@ input[type=checkbox] {
     /*border: 1px solid rgba(0,0,0,.125);*/
     
 }
+
+/*CLASE DE GRID BOOTSTRAP FALTA ARREGLAR EL GRID*/
+
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, 
+.col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1,
+ .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5,
+  .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, 
+  .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7,
+   .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, 
+   .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, 
+   .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 2px;
+    padding-left: 10px;
+}
+
+/*CLASE DE GRID BOOTSTRAP FALTA ARREGLAR EL GRID*/
