--- a/css/default/destino_salida.css
+++ b/css/default/destino_salida.css
@@ -19,7 +19,7 @@
     font-size: 14px;
     line-height: 40px;
     font-family: inherit;
-     font-weight: bold;
+    font-weight: bold;
 }
 
 .tail-select2 button{
@@ -269,9 +269,9 @@
     /* Cambio de tamaño al hacer click  */
     min-height: 35px;
     margin: -1px 0 0 0;
+    
     padding: 0;
     z-index: 30;
-    overflow: hidden;
     position: absolute;
     background-color: white;
     border-width: 0px;
@@ -281,6 +281,10 @@
     -webkit-box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px rgba(0, 0, 0, 0.25);
     animation-duration: 5ms;  
     display:none;
+    max-height: 400px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
 }
 
 
@@ -343,12 +347,13 @@
 
 .tail-select2 .select-dropdown2 ul li{
     color: #303438;
-    padding: 10px 10px 10px 15px;
+    padding: 10px 10px 10px 5px;
     font-size: 16px;
     text-align: left;
     line-height: 18px;
     font-weight: normal;
     display: flex;
+    min-height: 90px
 }
 
 /*margenes de las opciones */
@@ -573,7 +578,7 @@ input[type=checkbox] {
     cursor: pointer;
     color: #425E66;
     position: relative;
-    padding: 5px 15px 5px 51px;
+    padding: 5px 15px 5px 25px;
     font-size: 1em;
     border-radius: 5px;
     -webkit-transition: all 0.3s ease;
@@ -584,7 +589,8 @@ input[type=checkbox] {
     }
     
     .checkbox label:hover {
-      background: #F6F8FA; }
+      background: #F6F8FA; 
+    }
     
     .checkbox label:before {
       content: "";
@@ -592,17 +598,42 @@ input[type=checkbox] {
       width: 17px;
       height: 17px;
       position: absolute;
-      left: 15px;
+      left: 0px;
       border-radius: 0%;
       background: none;
-      border: 3px solid #425E66; }
+      border: 3px solid #425E66; 
+    }
+ /*   
+    .checkbox .calendario label:before {
+      content: "";
+      display: inline-block;
+      width: 0px;
+      height: 0px;
+      position: absolute;
+      left: 10px;
+      border-radius: 0%;
+      background: none;
+      border: 3px solid #425E66; 
+    }
+*/
+
     .checkbox label:before {
-    border-radius: 3px; }
+        border-radius: 3px; 
+    }
+
     .checkbox input[type="checkbox"] {
-    display: none; }
+        display: none; 
+    }
+
     .checkbox input[type="checkbox"]:checked + label:before {
-      display: none; }
+      display: none; 
+    }
+
     .checkbox input[type="checkbox"]:checked + label {
       background: #d3dce6;
       color: #425E66;
       padding: 5px 15px; }
+
+      /*CHECKBOX*/
+
+
