--- a/css/default/fechas.css
+++ b/css/default/fechas.css
@@ -12,8 +12,8 @@
 
 /* @start GENERAL */
 
-.tail-select{
-    width: 90%;
+.tail-select4{
+    width: 100%;
     margin: 1px;
     position: relative;
     font-size: 14px;
@@ -22,11 +22,11 @@
     font-weight: bold;
 }
 
-.tail-select button{
+.tail-select4 button{
     outline: none;
 }
 /*Caracteristicas generales de los botones todos y ninguno*/
-.tail-select button.tail-all, .tail-select button.tail-none{
+.tail-select4 button.tail-all4, .tail-select4 button.tail-none4{
     height: auto;
     margin: 0 2px;
     padding: 2px 6px;
@@ -46,42 +46,42 @@
     -webkit-transition: color 142ms linear, border 142ms linear, background 142ms linear;
 }
 /*Propiedades de boton todos */
-.tail-select button.tail-all{
+.tail-select4 button.tail-all4{
     color: rgba(48, 52, 56, 0.5);
     border-color: rgba(48, 52, 56, 0.5);
     background-color: transparent;
 }
 /*Efecto hover del boton todos*/
-.tail-select button.tail-all:hover{
+.tail-select4 button.tail-all4:hover{
     color: #62C462;
     border-color: #62C462;
     background-color: transparent;
 }
 /*Propiedades de boton todos */
-.tail-select button.tail-none{
+.tail-select4 button.tail-none4{
     color: rgba(48, 52, 56, 0.5);
     border-color: rgba(48, 52, 56, 0.5);
     background-color: transparent;
 }
 /*Efecto hover del boton ninguno*/
-.tail-select button.tail-none:hover{
+.tail-select4 button.tail-none4:hover{
     color: #EE5F5B;
     border-color: #EE5F5B;
     background-color: transparent;
 }
 
-.tail-select.disabled button.tail-all{
+.tail-select4.disabled button.tail-all4{
     color: rgba(48, 52, 56, 0.25);
     border-color: rgba(48, 52, 56, 0.25);
     background-color: transparent;
 }
-.tail-select.disabled button.tail-none{
+.tail-select4.disabled button.tail-none4{
     color: rgba(48, 52, 56, 0.25);
     border-color: rgba(48, 52, 56, 0.25);
     background-color: transparent;
 }
 /*Input de texto del selector*/
-.tail-select input[type="text"]{
+.tail-select4 input[type="text"]{
     color: #303438;
     width: 100%;
     height: auto;
@@ -99,29 +99,28 @@
     box-shadow: none;
     -webkit-box-shadow: none;
 }
-.tail-select input[type="text"]:hover{
+.tail-select4 input[type="text"]:hover{
     color: #303438;
     border-color: transparent;
     background-color: transparent;
 }
-.tail-select input[type="text"]:focus{
+.tail-select4 input[type="text"]:focus{
     color: #3C82E6;
     border-color: transparent;
     background-color: transparent;
 }
-.tail-select.disabled input[type="text"]{
+.tail-select4.disabled input[type="text"]{
     color: rgba(48, 52, 56, 0.75);
     border-color: transparent;
     background-color: transparent;
 }
-.tail-select-container{
+.tail-select-container4{
     margin: 0;
     padding: 3px;
     text-align: left;
-   
 }
 /*No esta en los controladores*/
-.tail-select-container .select-handle{
+.tail-select-container4 .select-handle4{
     width: auto;
     color: #303438;
     cursor: pointer;
@@ -139,22 +138,22 @@
     border-width: 0;
     border-style: solid;
     border-color: transparent;
-    
+   
     transition: background 142ms linear;
     -webkit-transition: background 142ms linear;
 }
-.tail-select-container .select-handle:hover{
+.tail-select-container4 .select-handle4:hover{
     color: #303438;
     background-color: #DC4650;
 }
-.tail-select-container.select-label .select-handle{
+.tail-select-container4.select-label4 .select-handle4{
     margin: 5px 3px;
 }
 /* @end GENERAL */
 
 /* @start LABEL */
 /*Input principal*/
-.tail-select .select-label{
+.tail-select4 .select-label4{
     cursor: pointer;
     color: rgba(48, 52, 56, 0.85);
     width: 100%;
@@ -167,12 +166,11 @@
     background-color: white;
     border-width: 0px;
     border-style: solid;
-    border-color: #d9d9d9;
 }
 
 
 /*Flecha del input principal*/
-.tail-select .select-label:after{
+.tail-select4 .select-label4:after{
     top: 15px;
     right: 12px;
     width: 0;
@@ -192,14 +190,14 @@
     -webkit-transition: opacity 142ms linear, transform 142ms linear;
 }
 
-.tail-select .select-label .label-count, .tail-select .select-label .label-inner{
+.tail-select4 .select-label4 .label-count4, .tail-select4 .select-label4 .label-inner4{
     width: auto;
     margin: 0;
     text-align: left;
     vertical-align: top;
 }
 /*Contador del input principal*/
-.tail-select .select-label .label-count{
+.tail-select4 .select-label4 .label-count4{
     float: left;
     color: rgba(48, 52, 56, 0.85);
     margin: 0 5px 0 0;
@@ -216,35 +214,35 @@
     border-radius: 0px;
 }
 /*contenedor del texto del input principal*/
-.tail-select .select-label .label-inner{
+.tail-select4 .select-label4 .label-inner4{
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-.tail-select:hover .select-label, .tail-select.idle .select-label,
-.tail-select.active .select-label{
+.tail-select4:hover .select-label4, .tail-select2.idle4 .select-label4,
+.tail-select4.active .select-label4{
     z-index: 25;
     box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px #3C82E6;
     -webkit-box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px #3C82E6;
 }
-.tail-select:hover .select-label:after, .tail-select.idle .select-label:after,
-.tail-select.active .select-label:after{
+.tail-select4:hover .select-label4:after, .tail-select4.idle4 .select-label4:after,
+.tail-select4.active4 .select-label4:after{
     opacity: 0.85;
 }
-.tail-select:hover .select-label .label-count, .tail-select.idle .select-label .label-count,
-.tail-select.active .select-label .label-count, .tail-select:hover .select-label .label-inner,
-.tail-select.idle .select-label .label-inner, .tail-select.active .select-label .label-inner{
+.tail-select4:hover .select-label4 .label-count4, .tail-select4.idle4 .select-label4 .label-count4,
+.tail-select4.active4 .select-label4 .label-count4, .tail-select4:hover .select-label4 .label-inner4,
+.tail-select4.idle4 .select-label4 .label-inner4, .tail-select4.active4 .select-label4 .label-inner4{
     opacity: 1;
 }
-.tail-select.active .select-label{
+.tail-select4.active4 .select-label4{
     z-index: 27;
 }
-.tail-select.active .select-label:after{
+.tail-select4.active4 .select-label4:after{
     opacity: 0.85;
     transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     -webkit-transform: rotate(180deg);
 }
-.tail-select.disabled .select-label{
+.tail-select4.disabled4 .select-label4{
     cursor: not-allowed;
     box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.35);
     -webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.35);
@@ -253,7 +251,7 @@
 
 /* @start DROPDOWN */
 /*Dropdown principal*/
-.tail-select .select-dropdown{
+.tail-select4 .select-dropdown4{
    top: 100%;
     left: 0;
     color: #303438;
@@ -265,21 +263,25 @@
     padding: 0;
     z-index: 30;
     display: none; 
-    overflow: hidden;
+    column-count: 2;
     position: absolute;
     background-color: white;
     border-width: 0px;
     border-style: solid;
     border-color: #d9d9d9;
-    
     box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px rgba(0, 0, 0, 0.25);
     -webkit-box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1), 0 0 1px 1px rgba(0, 0, 0, 0.25);
     animation-name: selector;
     animation-duration: 5ms;  
+    max-height: 400px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    
 }
 
 
-.tail-select .select-dropdown .dropdown-search{
+
+.tail-select4 .select-dropdown4 .dropdown-search4{
     width: 100%;
     margin: 0;
     padding: 0;
@@ -291,7 +293,7 @@
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
     -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
 }
-.tail-select .select-dropdown .dropdown-inner{
+.tail-select4 .select-dropdown4 .dropdown-inner4{
     width: 100%;
     margin: 0;
     padding: 1px 0;
@@ -299,7 +301,7 @@
     overflow-x: hidden;
     overflow-y: auto;
 }
-.tail-select .select-dropdown .dropdown-empty{
+.tail-select4 .select-dropdown4 .dropdown-empty4{
     margin: 0;
     padding: 16px 0;
     /*display: block;*/
@@ -307,7 +309,7 @@
     text-align: center;
     line-height: 18px;
 }
-.tail-select .select-dropdown .dropdown-action{
+.tail-select4 .select-dropdown4 .dropdown-action4{
     top: 3px;
     right: 15px;
     width: auto;
@@ -320,18 +322,10 @@
 }
 
 
-.tail-select .select-dropdown ul, .tail-select .select-dropdown ul li{
+.tail-select4 .select-dropdown4 ul, .tail-select4 .select-dropdown4 ul li{
     width: 100%;
-
- /*ver estas cosas  
-    column-count: 2;
-    column-gap: 0;
-    list-style: ;
-ver estas cosas  */
-
     margin: 0;
     padding: 0;
-    /*display: ;*/
     position: relative;
     list-style: none;
     font-size: 14px;
@@ -341,9 +335,10 @@ ver estas cosas  */
 
 
 
-.tail-select .select-dropdown ul li{
-    color: #303438;
-    padding: 5px 10px 5px 35px;
+
+.tail-select4 .select-dropdown4 ul li{
+    color: #425E66;
+    padding: 5px 10px 5px 5px;
     font-size: 12px;
     text-align: left;
     line-height: 18px;
@@ -351,15 +346,15 @@ ver estas cosas  */
 }
 
 /*margenes de las opciones */
-.tail-select .select-dropdown ul li:first-of-type{
+.tail-select4 .select-dropdown4 ul li:first-of-type{
     margin-top: 0px;
 }
-.tail-select .select-dropdown ul li:last-of-type{
+.tail-select4 .select-dropdown4 ul li:last-of-type{
     margin-bottom: 0px;
 }
 /*margenes de las opciones */
 
-.tail-select .select-dropdown ul li.optgroup-title{
+.tail-select4 .select-dropdown4 ul li.optgroup-title4{
     color: rgba(48, 52, 56, 0.7);
     cursor: default;
     margin: 9px 0 0 0;
@@ -367,37 +362,20 @@ ver estas cosas  */
     font-size: 14px;
     text-shadow: none;
 }
-.tail-select .select-dropdown ul li.optgroup-title button{
+.tail-select4 .select-dropdown4 ul li.optgroup-title4 button{
     float: right;
     margin-top: -2px;
     opacity: 0;
 }
-.tail-select .select-dropdown ul:hover li button{
+.tail-select4 .select-dropdown4 ul:hover li button{
     opacity: 1;
 }
-ul li.dropdown-option{
+ul li.dropdown-option4{
     cursor: pointer;
     color: #303438;
 }
-li.dropdown-option:before{
-    top: 0;
-    left: 0;
-    width: 30px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-    z-index: 21;
-    display: inline-block;
-    content: "";
-    opacity: 0;
-    position: absolute;
-    vertical-align: top;
-    background-repeat: no-repeat;
-    background-position: center center;
-    transition: opacity 50ms linear;
-    -webkit-transition: opacity 50ms linear;
-}
-.tail-select .select-dropdown ul li.dropdown-option .option-description{
+
+.tail-select4 .select-dropdown4 ul li.dropdown-option4 .option-description4{
     color: rgba(48, 52, 56, 0.85);
     width: auto;
     margin: 0;
@@ -408,60 +386,63 @@ li.dropdown-option:before{
     line-height: 14px;
     vertical-align: top;
 }
-.tail-select .select-dropdown ul li.dropdown-option:hover,
-.tail-select .select-dropdown ul li.dropdown-option.hover{
+.tail-select4 .select-dropdown4 ul li.dropdown-option4:hover,
+.tail-select4 .select-dropdown4 ul li.dropdown-option4.hover{
     color: #303438;
 }
-.tail-select .select-dropdown ul li.dropdown-option:hover .option-description,
-.tail-select .select-dropdown ul li.dropdown-option.hover .option-description{
+.tail-select4 .select-dropdown4 ul li.dropdown-option4:hover .option-description4,
+.tail-select4 .select-dropdown4 ul li.dropdown-option4.hover .option-description4{
     color: #303438;
 }
-.tail-select.open-top .select-dropdown{
+.tail-select4.open-top3 .select-dropdown4{
     top: auto;
     bottom: 100%;
     margin: 0 0 -1px 0;
     
 }
-.tail-select.hide-selected .select-dropdown ul li.selected,
-.tail-select.hide-disabled .select-dropdown ul li.disabled{
+.tail-select4.hide-selected4 .select-dropdown4 ul li.selected,
+.tail-select4.hide-disabled4 .select-dropdown4 ul li.disabled{
     display: none;
 }
 
-.tail-select .select-dropdown ul li.dropdown-option:hover:before,
-.tail-select .select-dropdown ul li.dropdown-option.hover:before{
+.tail-select4 .select-dropdown4 ul li.dropdown-option4:hover:before,
+.tail-select4 .select-dropdown4 ul li.dropdown-option4.hover:before{
     opacity: 0.5;
 }
-.tail-select .select-dropdown ul li.dropdown-option.selected{
+.tail-select4 .select-dropdown4 ul li.dropdown-option4.selected{
     color: #3C82E6;
     background-color: white;
 }
 
-.tail-select .select-dropdown ul li.dropdown-option.selected .option-description{
+.tail-select4 .select-dropdown4 ul li.dropdown-option4.selected .option-description4{
     color: #3C82E6;
 }
 
-.tail-select.deselect .select-dropdown ul li.dropdown-option.selected:hover .option-description,
-.tail-select.deselect .select-dropdown ul li.dropdown-option.selected.hover .option-description{
+.tail-select4.deselect .select-dropdown4 ul li.dropdown-option4.selected:hover .option-description4,
+.tail-select4.deselect .select-dropdown4 ul li.dropdown-option4.selected.hover .option-description4{
     color: #3C82E6;
 }
-.tail-select .select-dropdown ul li.dropdown-option{
+.tail-select4 .select-dropdown4 ul li.dropdown-option4{
     transition: all 0.3s ease-in;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: left;
 }
-.tail-select .select-dropdown ul li.dropdown-option:hover,
-.tail-select .select-dropdown ul li.dropdown-option.hover{
+.tail-select4 .select-dropdown4 ul li.dropdown-option4:hover,
+.tail-select4 .select-dropdown4 ul li.dropdown-option4.hover{
     transition: all 0.4s ease;
     background-color: #e9edf2;
 }
-.tail-select.disabled .select-dropdown ul li.dropdown-option,
-.tail-select .select-dropdown ul li.dropdown-option.disabled{
+.tail-select.disabled4 .select-dropdown4 ul li.dropdown-option4,
+.tail-select4 .select-dropdown4 ul li.dropdown-option4.disabled{
     cursor: not-allowed;
     color: rgba(48, 52, 56, 0.4);
     text-shadow: 0px 1px 0px rgba(119, 129, 138, 0.1), 0px -1px 0px rgba(0, 0, 0, 0.1);
     background-color: #fafafa;
 }
 
-.tail-select.disabled .select-dropdown ul li.dropdown-option .option-description,
-.tail-select .select-dropdown ul li.dropdown-option.disabled .option-description{
+.tail-select4.disabled .select-dropdown4 ul li.dropdown-option4 .option-description4,
+.tail-select4 .select-dropdown4 ul li.dropdown-option4.disabled4 .option-description4{
     color: rgba(48, 52, 56, 0.4);
 }
 /* State & Icons :: Multiple */
@@ -469,4 +450,11 @@ li.dropdown-option:before{
 
 
 
+/*Para los botones*/
 
+.color_letra{
+    color:#425E66;
+    font-weight: bold;
+    font-size: 0.8em;
+    background-color:rgba(238, 242, 246, 0.5)
+}
